--- a/src/views/wifi.html
+++ b/src/views/wifi.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-md-7">
+            <div class="col-md-7" style="height: 200px; width: 200px; overflow-y: scroll;">
                 <div class="content p-4">
                 </div>
             </div>
@@ -55,7 +55,7 @@
                 //     </div>
                 // </div>`
                 wifi.innerHTML += `<button type="button" class="w-100 btn btn-lg btn-outline-primary" onclick="select('${obj[i].ssid}')">
-                    <span class="fa fa-wifi"></span>&nbsp;${obj[i].ssid}&nbsp;<span class="fa fa-${obj[i].security != 'None' ? 'lock' : 'unlock'}"></span>
+                    <span class="fa fa-wifi"></span>&nbsp;${obj[i].ssid}&nbsp;<span class="fa fa-${obj[i].security != '' ? 'lock' : 'unlock'}"></span>
                     </button>`
 
             }
@@ -65,7 +65,6 @@
         form.addEventListener('submit', e => {
             const name = document.querySelector('#name').value;
             const pass = document.querySelector('#pass').value;
-            const descProduct = document.querySelector('#description').value;
             console.log(name, pass);
             const newWifi = {
                 name: name,
