--- a/src/views/keyboard.css
+++ b/src/views/keyboard.css
@@ -1,187 +1,76 @@
-.teclado{
-    padding: 5px 5px 20px;
-    border-radius: 5px;
-    display: inline-block;
-    -webkit-user-select: none;
-  }
-  .bloque{
-    display: inline-block;
-    vertical-align: middle;
-  }
-  .fila-teclas::after, .fila-teclas::before{
-    content: '';
-    display: table;
-    clear: both;
-  }
-  .tecla{
-    padding: 10px 5px 0px;
-    float: left;
-  }
-  .tecla > span{
-    background-color: #0d6efd;
-    height: 32px;
-    padding-top: 5px;
-    padding-left: 10px;
-    padding-right: 10px;
-    display: inline-block;
-    font-family: Verdana;
-    color: #fff;
-    font-size: 13px;
-    box-shadow: 0px 0px 5px 2px #0a58ca;
-    border-radius: 2px 2px 8px 8px;
-    cursor: pointer;
-  }
-  .tecla > span:hover{
-    background-color: #0b5ed7;
-    cursor: pointer;
-  }
-  .tecla > span:active{
-    background-color: #0d6efd;
-    cursor: pointer;
-    box-shadow: 0px 0px 5px 2px #0a58ca;
-  }
-  .tecla-letra > span{
-    width: 30px;
-  }
-  .tecla-bloq-mayus > span{
-    width: 60px;
-    font-size: 10px;
-    text-transform: none;
-  }
-  .tecla-shift > span{
-    width: 40px;
-    font-size: 10px;
-    text-transform: none;
-    line-height: 27px;
-  }
-  .tecla-caract-espec span{
-    width: 30px;
-    font-size: 10px;
-  }
-  .tecla-caract-espec-tiny span{
-    width: 22px;
-    font-size: 10px;
-  }
-  .tecla-ctrl span{
-    width: 35px;
-    text-transform: none;
-    line-height: 27px;
-  }
-  .tecla-fn span{
-    width: 30px;
-    font-size: 10px;
-    text-transform: none;
-    line-height: 14px;
-  }
-  .tecla-windows span{
-    width: 30px;
-    font-size: 7px;
-    text-transform: none;
-    line-height: 27px;
-  }
-  .tecla-alt span{
-    width: 30px;
-    text-transform: none;
-    line-height: 27px;
-  }
-  .tecla-space-bar span{
-    width: 280px;
-  }
-  .tecla-alt-gr span{
-    width: 28px;
-    font-size: 9px;
-    text-transform: none;
-    line-height: 27px;
-  }
-  .tecla-btn-left span{
-    width: 28px;
-    font-size: 9px;
-    text-transform: none;
-    line-height: 27px;
-  }
-  .tecla-ctrl-two span{
-    width: 50px;
-    text-transform: none;
-    line-height: 27px;
-  }
-  .tecla-tab span{
-    width: 52px;
-    font-size: 10px;
-    text-transform: none;
-  }
-  .tecla-null span{
-    width: 30px;
-    font-size: 10px;
-    text-transform: none;
-  }
-  .tecla-shift-numero span{
-    width: 29px;
-    font-size: 10.5px;
-    line-height: 13.5px;
-    text-transform: none;
-  }
-  .tecla-backspace span{
-    width: 48px;
-    font-size: 10px;
-    line-height: 27px;
-    text-transform: none;
-  }
-  .tecla-simple span{
-    width: 18px;
-    line-height: 27px;
-    text-transform: none;
-    text-align: center;
-  }
-  .tecla-num-lock span{
-    width: 18px;
-    line-height: 13.5px;
-    font-size: 8px;
-    text-transform: none;
-  }
-  .tecla-simple-2h span{
-    width: 18px;
-    height: 79px;
-    line-height: 74px;
-    font-size: 8px;
-    text-transform: none;
-    text-align: center;
-    position: absolute;
-  }
-  .tecla-enter span{
-    width: 32px;
-    font-size: 9px;
-    text-transform: none;
-    line-height: 27px;
-    border-radius: 2px 2px 0px 8px;
-    box-shadow: 0px 0px 5px 2px #333;
-    position: relative;
-    text-align: center;
-  }
-  .tecla-enter span::after{
-    background-color: #555;
-    display: block;
-    box-shadow: 0px 3px 5px 1px #333;
-    position: absolute;
-    content: '';
-    height: 46px;
-    width: 40px;
-    top: 37px;
-    right: 0px;
-  }
-  .tecla-enter span:hover::after{
-    background-color: #666;
-    cursor: pointer;
-  }
-  .tecla-enter span:active{
-    box-shadow: 0px 0px 2px #222;
-  }
-  .tecla-enter span:active::after{
-    box-shadow: 0px 2px 2px #222;
-    background-color: #555;
-  }
-  /* .center{
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-  } */
+/* * {
+margin: 0;
+padding: 0;
+} */
+/* body {
+font: 71%/1.5 Verdana, Sans-Serif;
+background: #eee;
+} */
+/* #container {
+margin: 100px auto;
+width: 688px;
+} */
+#write {
+	margin: 0 0 5px;
+	padding: 5px;
+	width: 671px;
+	height: 200px;
+	font: 1em/1.5 Verdana, Sans-Serif;
+	background: #fff;
+	border: 5px solid #ced4da;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+}
+#keyboard {
+	list-style: none;
+}
+#keyboard li {
+	float: left;
+	margin: 0 5px 5px 0;
+	width: 70px;
+	height: 70px;
+	line-height: 40px;
+	text-align: center;
+	background: #fff;
+	border: 1px solid #007bff;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+}
+.capslock, .tab, .left-shift {
+	clear: left;
+}
+#keyboard .tab, #keyboard .delete {
+	width: 70px;
+}
+#keyboard .capslock {
+	width: 109px;
+}
+#keyboard .return {
+	width: 106px;
+}
+#keyboard .left-shift {
+	width: 138px;
+}
+#keyboard .right-shift {
+	width: 152px;
+}
+.lastitem {
+	margin-right: 0;
+}
+.uppercase {
+	text-transform: uppercase;
+}
+#keyboard .space {
+	clear: left;
+	width: 1045px;
+}
+.on {
+	display: none;
+}
+#keyboard li:hover {
+	position: relative;
+	top: 1px;
+	left: 1px;
+	border-color: #e5e5e5;
+	cursor: pointer;
+}
