--- a/src/views/wifi.html
+++ b/src/views/wifi.html
@@ -2,283 +2,137 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add A New Product</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="keyboard.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Add A New Product</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="keyboard.css">
 </head>
 
 <body>
-    <div class="container">
-        <div class="row col-md-12">
-            <div class="col-md-7" style="height: 200px; overflow-y: scroll;">
-                <div class="content p-4">
-                </div>
-            </div>
-            <div class="col-md-5">
-                <form class="p-4">
-                    <div class="form-group">
-                        <input type="text" class="form-control" id="name" placeholder="SSID" autofocus>
-                    </div>
-                    <div class="form-group">
-                        <input type="password" class="form-control" id="pass" placeholder="Contraseña">
-                    </div>
-                    <button class="btn btn-primary btn-block"> Conectarse</button>
-                </form>
-            </div>
+  <div class="container">
+    <div class="row col-md-12">
+      <div class="col-md-7" style="height: 200px; overflow-y: scroll;">
+        <div class="content p-4">
         </div>
-        <div class="row">
-            <div class="teclado p-4">
-                <div class="bloque">
-                  <div class="fila-teclas">
-                    <span class="tecla tecla-null" id="bar">
-                      <span>&#124;</span>
-                    </span>
-                    <span class="tecla tecla-shift-numero" id="v1">
-                      <span>1</span>
-                    </span>
-                    <span class="tecla tecla-shift-numero" id="v2">
-                      <span>2</span>
-                    </span>
-                    <span class="tecla tecla-shift-numero" id="v3">
-                      <span>3</span>
-                    </span>
-                    <span class="tecla tecla-shift-numero" id="v4">
-                      <span>4</span>
-                    </span>
-                    <span class="tecla tecla-shift-numero" id="v5">
-                      <span>5</span>
-                    </span>
-                    <span class="tecla tecla-shift-numero" id="v6">
-                      <span>6</span>
-                    </span>
-                    <span class="tecla tecla-shift-numero" id="v7">
-                      <span>7</span>
-                    </span>
-                    <span class="tecla tecla-shift-numero" id="v8">
-                      <span>8</span>
-                    </span>
-                    <span class="tecla tecla-shift-numero" id="v9">
-                      <span>9</span>
-                    </span>
-                    <span class="tecla tecla-shift-numero" id="v0">
-                      <span>0</span>
-                    </span>
-                    <span class="tecla tecla-caract-espec" id="question">
-                      <span>&#39;</span>
-                    </span>
-                    <span class="tecla tecla-caract-espec" id="questiontwo">
-                      <span>&#191;</span>
-                    </span>
-                    <span class="tecla tecla-backspace">
-                      <span>&leftarrow;</span>
-                    </span>
-                  </div>
-                  <div class="fila-teclas">
-                    <span class="tecla tecla-tab">
-                      <span>Tab</span>
-                    </span>
-                    <span class="tecla tecla-letra">
-                      <span>q</span>
-                    </span>
-                    <span class="tecla tecla-letra">
-                      <span>w</span>
-                    </span>
-                    <span class="tecla tecla-letra">
-                      <span>e</span>
-                    </span>
-                    <span class="tecla tecla-letra">
-                      <span>r</span>
-                    </span>
-                    <span class="tecla tecla-letra">
-                      <span>t</span>
-                    </span>
-                    <span class="tecla tecla-letra">
-                      <span>y</span>
-                    </span>
-                    <span class="tecla tecla-letra">
-                      <span>u</span>
-                    </span>
-                    <span class="tecla tecla-letra">
-                      <span>i</span>
-                    </span>
-                    <span class="tecla tecla-letra">
-                      <span>o</span>
-                    </span>
-                    <span class="tecla tecla-letra">
-                      <span>p</span>
-                    </span>
-                    <span class="tecla tecla-caract-espec-tiny" id="accent">
-                      <span>&#180;</span>
-                    </span>
-                    <span class="tecla tecla-caract-espec-tiny" id="plus">
-                      <span>&#43;</span>
-                    </span>
-                  </div>
-                  <div class="fila-teclas">
-                    <span class="tecla tecla-bloq-mayus">
-                      <span>Bloq. Mayús</span>
-                    </span>
-                    <span class="tecla tecla-letra">
-                      <span>a</span>
-                    </span>
-                    <span class="tecla tecla-letra">
-                      <span>s</span>
-                    </span>
-                    <span class="tecla tecla-letra">
-                      <span>d</span>
-                    </span>
-                    <span class="tecla tecla-letra">
-                      <span>f</span>
-                    </span>
-                    <span class="tecla tecla-letra">
-                      <span>g</span>
-                    </span>
-                    <span class="tecla tecla-letra">
-                      <span>h</span>
-                    </span>
-                    <span class="tecla tecla-letra">
-                      <span>j</span>
-                    </span>
-                    <span class="tecla tecla-letra">
-                      <span>k</span>
-                    </span>
-                    <span class="tecla tecla-letra">
-                      <span>l</span>
-                    </span>
-                    <span class="tecla tecla-letra">
-                      <span>ñ</span>
-                    </span>
-                    <span class="tecla tecla-caract-espec-tiny" id="leftbra">
-                      <span>&#123;</span>
-                    </span>
-                    <span class="tecla tecla-caract-espec-tiny" id="rightbra">
-                      <span>&#125;</span>
-                    </span>
-                  </div>
-                  <div class="fila-teclas">
-                    <span class="tecla tecla-shift">
-                      <span>Shift</span>
-                    </span>
-                    <span class="tecla tecla-caract-espec" id="greater">
-                      <span>&lt;</span>
-                    </span>
-                    <span class="tecla tecla-letra">
-                      <span>z</span>
-                    </span>
-                    <span class="tecla tecla-letra">
-                      <span>x</span>
-                    </span>
-                    <span class="tecla tecla-letra">
-                      <span>c</span>
-                    </span>
-                    <span class="tecla tecla-letra">
-                      <span>v</span>
-                    </span>
-                    <span class="tecla tecla-letra">
-                      <span>b</span>
-                    </span>
-                    <span class="tecla tecla-letra">
-                      <span>n</span>
-                    </span>
-                    <span class="tecla tecla-letra">
-                      <span>m</span>
-                    </span>
-                    <span class="tecla tecla-caract-espec" id="dotcoma">
-                      <span>&#44;</span>
-                    </span>
-                    <span class="tecla tecla-caract-espec" id="twodots">
-                      <span>&#46;</span>
-                    </span>
-                    <span class="tecla tecla-caract-espec" id="minus">
-                      <span>&#8211;</span>
-                    </span>
-                    <span class="tecla tecla-shift">
-                      <span>Shift</span>
-                    </span>
-                  </div>
-                  <div class="fila-teclas">
-                    <span class="tecla tecla-ctrl">
-                      <span>Ctrl</span>
-                    </span>
-                    <span class="tecla tecla-fn">
-                      <span>Fn<br>&#160;&#175;</span>
-                    </span>
-                    <span class="tecla tecla-windows">
-                      <span>Windows</span>
-                    </span>
-                    <span class="tecla tecla-alt">
-                      <span>Alt</span>
-                    </span>
-                    <span class="tecla tecla-space-bar">
-                      <span>&nbsp;</span>
-                    </span>
-                    <span class="tecla tecla-alt-gr">
-                      <span>Alt Gr</span>
-                    </span>
-                    <span class="tecla tecla-btn-left">
-                      <span>&nbsp;</span>
-                    </span>
-                    <span class="tecla tecla-ctrl-two">
-                      <span>Ctrl</span>
-                    </span>
-                  </div>
-                </div>
-              </div>
-        </div>
+      </div>
+      <div class="col-md-5">
+        <form class="p-4">
+          <div class="form-group">
+            <input type="text" class="form-control" id="name" placeholder="SSID" autofocus>
+          </div>
+          <div class="form-group">
+            <input type="text" class="form-control" id="keyboard" placeholder="Contraseña">
+          </div>
+          <button class="btn btn-primary btn-block"> Conectarse</button>
+        </form>
+      </div>
     </div>
-    <script src="keyboard.js"></script>
-    <script>
-        const { ipcRenderer } = require('electron');
-        const wifi = document.querySelector('.content.p-4');
-        window.onload = function () {
-            ipcRenderer.send('wifi:scan', { method: 'get' });
-        }
+    <br>
+    <div class="row">
+      <ul id="keyboard">
+        <li class="symbol"><span class="off">`</span><span class="on">~</span></li>
+        <li class="symbol"><span class="off">1</span><span class="on">!</span></li>
+        <li class="symbol"><span class="off">2</span><span class="on">@</span></li>
+        <li class="symbol"><span class="off">3</span><span class="on">#</span></li>
+        <li class="symbol"><span class="off">4</span><span class="on">$</span></li>
+        <li class="symbol"><span class="off">5</span><span class="on">%</span></li>
+        <li class="symbol"><span class="off">6</span><span class="on">^</span></li>
+        <li class="symbol"><span class="off">7</span><span class="on">&amp;</span></li>
+        <li class="symbol"><span class="off">8</span><span class="on">*</span></li>
+        <li class="symbol"><span class="off">9</span><span class="on">(</span></li>
+        <li class="symbol"><span class="off">0</span><span class="on">)</span></li>
+        <li class="symbol"><span class="off">-</span><span class="on">_</span></li>
+        <li class="symbol"><span class="off">=</span><span class="on">+</span></li>
+        <li class="delete lastitem">delete</li>
+        <li class="tab">tab</li>
+        <li class="letter">q</li>
+        <li class="letter">w</li>
+        <li class="letter">e</li>
+        <li class="letter">r</li>
+        <li class="letter">t</li>
+        <li class="letter">y</li>
+        <li class="letter">u</li>
+        <li class="letter">i</li>
+        <li class="letter">o</li>
+        <li class="letter">p</li>
+        <li class="symbol"><span class="off">[</span><span class="on">{</span></li>
+        <li class="symbol"><span class="off">]</span><span class="on">}</span></li>
+        <li class="symbol lastitem"><span class="off">\</span><span class="on">|</span></li>
+        <li class="capslock">caps lock</li>
+        <li class="letter">a</li>
+        <li class="letter">s</li>
+        <li class="letter">d</li>
+        <li class="letter">f</li>
+        <li class="letter">g</li>
+        <li class="letter">h</li>
+        <li class="letter">j</li>
+        <li class="letter">k</li>
+        <li class="letter">l</li>
+        <li class="symbol"><span class="off">;</span><span class="on">:</span></li>
+        <li class="symbol"><span class="off">'</span><span class="on">&quot;</span></li>
+        <li class="return lastitem">return</li>
+        <li class="left-shift">shift</li>
+        <li class="letter">z</li>
+        <li class="letter">x</li>
+        <li class="letter">c</li>
+        <li class="letter">v</li>
+        <li class="letter">b</li>
+        <li class="letter">n</li>
+        <li class="letter">m</li>
+        <li class="symbol"><span class="off">,</span><span class="on">&lt;</span></li>
+        <li class="symbol"><span class="off">.</span><span class="on">&gt;</span></li>
+        <li class="symbol"><span class="off">/</span><span class="on">?</span></li>
+        <li class="right-shift lastitem">shift</li>
+        <li class="space lastitem">&nbsp;</li>
+      </ul>
+    </div>
+  </div>
+  <script src="jquery-1.9.1.min.js"></script>
+  <script src="keyboard.js"></script>
+  <script>
+    const { ipcRenderer } = require('electron');
+    const wifi = document.querySelector('.content.p-4');
+    window.onload = function () {
+      ipcRenderer.send('wifi:scan', { method: 'get' });
+    }
 
-        document.querySelectorAll('.alert.alert-info').forEach(w => {
-            w.addEventListener('click', e => {
-                document.querySelector('#name').value(e.target.children.children.children.value);
-            })
-        })
+    document.querySelectorAll('.alert.alert-info').forEach(w => {
+      w.addEventListener('click', e => {
+        document.querySelector('#name').value(e.target.children.children.children.value);
+      })
+    })
 
-        ipcRenderer.on('wifi:list', (e, obj) => {
-            console.log(obj);
-            wifi.innerHTML = '';
-            for (let i = 0; i < obj.length; i++) {
-                // wifi.innerHTML += `<div class="alert alert-info" onclick="select('${obj[i].ssid}')">
-                //     <div class="row">
-                //         <div class="bs-callout bs-callout-info" id="callout-type-b-i-elems">
-                //             <h4><span class="fa fa-wifi"></span>${obj[i].ssid}<span class="fa fa-${obj[i].security != 'None' ? 'lock' : 'unlock'}"></span></h4>
-                //         </div>
-                //     </div>
-                // </div>`
-                wifi.innerHTML += `<button type="button" class="w-100 btn btn-lg btn-outline-primary" onclick="select('${obj[i].ssid}')">
+    ipcRenderer.on('wifi:list', (e, obj) => {
+      console.log(obj);
+      wifi.innerHTML = '';
+      for (let i = 0; i < obj.length; i++) {
+        wifi.innerHTML += `<button type="button" class="w-100 btn btn-lg btn-outline-primary" onclick="select('${obj[i].ssid}')">
                     <span class="fa fa-wifi"></span>&nbsp;${obj[i].ssid}&nbsp;<span class="fa fa-${obj[i].security != '' ? 'lock' : 'unlock'}"></span>
                     </button>`
 
-            }
-        })
+      }
+    })
 
-        const form = document.querySelector('form');
-        form.addEventListener('submit', e => {
-            const name = document.querySelector('#name').value;
-            const pass = document.querySelector('#pass').value;
-            console.log(name, pass);
-            const newWifi = {
-                name: name,
-                price: pass
-            };
-            ipcRenderer.send('wifi:new', newWifi)
-            e.preventDefault();
-        })
+    const form = document.querySelector('form');
+    form.addEventListener('submit', e => {
+      const name = document.querySelector('#name').value;
+      const pass = document.querySelector('#pass').value;
+      console.log(name, pass);
+      const newWifi = {
+        name: name,
+        price: pass
+      };
+      ipcRenderer.send('wifi:new', newWifi)
+      e.preventDefault();
+    })
 
-        function select(params) {
-            document.querySelector('#name').value = params;
-        }
-    </script>
+    function select(params) {
+      document.querySelector('#name').value = params;
+    }
+  </script>
 
 </body>
 
