--- a/src/views/wifi.html
+++ b/src/views/wifi.html
@@ -24,7 +24,7 @@
             <input type="text" class="form-control" id="name" placeholder="SSID" autofocus>
           </div>
           <div class="form-group">
-            <input type="text" class="form-control" id="keyboard" placeholder="Contraseña">
+            <input type="text" class="form-control" id="pass" placeholder="Contraseña">
           </div>
           <button class="btn btn-primary btn-block"> Conectarse</button>
         </form>
@@ -123,7 +123,7 @@
       console.log(name, pass);
       const newWifi = {
         name: name,
-        price: pass
+        pass: pass
       };
       ipcRenderer.send('wifi:new', newWifi)
       e.preventDefault();
