--- a/src/views/wifi.html
+++ b/src/views/wifi.html
@@ -14,7 +14,7 @@
 <body>
   <div class="container">
     <div class="row col-md-12">
-      <div class="col-md-7" style="height: 200px; overflow-y: scroll;">
+      <div class="col-md-7" style="height: 300px; overflow-y: scroll;">
         <div class="content p-4">
         </div>
       </div>
@@ -31,7 +31,9 @@
       </div>
     </div>
     <br>
-    <div class="row">
+  </div>
+  <div style="margin-left: 10%; margin-right: 10%;">
+    <div class="row" style="font-size: 34px">
       <ul id="keyboard">
         <li class="symbol"><span class="off">`</span><span class="on">~</span></li>
         <li class="symbol"><span class="off">1</span><span class="on">!</span></li>
@@ -46,8 +48,8 @@
         <li class="symbol"><span class="off">0</span><span class="on">)</span></li>
         <li class="symbol"><span class="off">-</span><span class="on">_</span></li>
         <li class="symbol"><span class="off">=</span><span class="on">+</span></li>
-        <li class="delete lastitem">delete</li>
-        <li class="tab">tab</li>
+        <li class="delete lastitem">&larr;</li>
+        <li class="tab">&#8633;</li>
         <li class="letter">q</li>
         <li class="letter">w</li>
         <li class="letter">e</li>
@@ -73,7 +75,7 @@
         <li class="letter">l</li>
         <li class="symbol"><span class="off">;</span><span class="on">:</span></li>
         <li class="symbol"><span class="off">'</span><span class="on">&quot;</span></li>
-        <li class="return lastitem">return</li>
+        <li class="return lastitem">&crarr;</li>
         <li class="left-shift">shift</li>
         <li class="letter">z</li>
         <li class="letter">x</li>
