Organización de los archivos

--- a/src/views/int.html
+++ b/src/views/int.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Add A New Product</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <title>Interacciones</title>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="TemplateData/css/font-awesome.min.css">
 </head>
 
@@ -19,8 +19,7 @@
     </div>
     <br>
   </div>
-  <script src="jquery-1.9.1.min.js"></script>
-  <script src="keyboard.js"></script>
+  <script src="js/jquery-1.9.1.min.js"></script>
   <script>
     const { ipcRenderer } = require('electron');
     const list = document.querySelector("#list");
