--- a/src/views/wifi.html
+++ b/src/views/wifi.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Add A New Product</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="keyboard.css">
+  <title>Wifi</title>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="TemplateData/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/keyboard.css">
 </head>
 
 <body>
@@ -92,8 +92,8 @@
       </ul>
     </div>
   </div>
-  <script src="jquery-1.9.1.min.js"></script>
-  <script src="keyboard.js"></script>
+  <script src="js/jquery-1.9.1.min.js"></script>
+  <script src="js/keyboard.js"></script>
   <script>
     const { ipcRenderer } = require('electron');
     const wifi = document.querySelector('.content.p-4');
