--- a/src/views/index.html
+++ b/src/views/index.html
@@ -6,28 +6,109 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>Eva</title>
   <link rel="shortcut icon" href="TemplateData/favicon.ico">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="TemplateData/style.css">
   <link rel="stylesheet" href="TemplateData/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/keyboard.css">
 </head>
 
 <body>
-  <div id="unity-container" class="unity-desktop">
-    <canvas id="unity-canvas"></canvas>
-    <div id="unity-loading-bar">
-      <div id="unity-logo"></div>
-      <div id="unity-progress-bar-empty">
-        <div id="unity-progress-bar-full"></div>
+  <div id="vieweyes">
+    <div id="unity-container" class="unity-desktop">
+      <canvas id="unity-canvas"></canvas>
+      <div id="unity-loading-bar">
+        <div id="unity-logo"></div>
+        <div id="unity-progress-bar-empty">
+          <div id="unity-progress-bar-full"></div>
+        </div>
+      </div>
+      <div id="unity-footer">
+        <div id="ip" style="font-size: 55px;" class="btn btn-primary"></div>
+        <div id="fullscreen" class="btn btn-primary f"><span class="fa fa-expand fa-5x"></span></div>
+        <div id="menu" class="btn btn-primary f" onclick="changeview('vieweyes', 'viewmenu')"><span class="fa fa-cog fa-5x"></span></div>
       </div>
     </div>
-    <div id="unity-footer">
-      <div id="ip" style="font-size: 55px;" class="btn btn-primary"></div>
-      <div id="fullscreen" class="btn btn-primary f"><span class="fa fa-expand fa-5x"></span></div>
-      <div id="wifi" class="btn btn-primary f"><span class="fa fa-wifi fa-5x"></span></div>
-      <div id="int" class="btn btn-primary f"><span class="fa fa-comments-o fa-5x"></span></div>
-      <div id="reboot" class="btn btn-primary f"><span center class="fa fa-refresh fa-5x"></span></div>
-      <div id="power" class="btn btn-primary f"><span class="fa fa-power-off fa-5x"></span></div>
+  </div>
+  <div id="viewmenu" style="display: none; justify-content: center; align-items: center;">
+    <div id="wifi" class="btn btn-primary f" onclick="changeview('viewmenu', 'viewwifi')"><span class="fa fa-wifi fa-5x"></span></div>
+    <div id="intwindow" class="btn btn-primary f" onclick="changeview('viewmenu', 'viewint')"><span class="fa fa-comments-o fa-5x"></span></div>
+    <div id="reboot" class="btn btn-primary f"><span center class="fa fa-refresh fa-5x"></span></div>
+    <div id="power" class="btn btn-primary f"><span class="fa fa-power-off fa-5x"></span></div>
+    <div id="back" class="btn btn-primary f" onclick="changeview('viewmenu', 'vieweyes')"><span class="fa fa-mail-reply fa-5x"></span></div>
+  </div>
+  <div id="viewint" style="display: none;">
+    <h1>Interacciones</h1>
+    <br>
+    <div id="list" class="row col-md-12">
+    </div>
+    <br>
+  </div>
+  <div id="viewwifi" style="display: none;">
+    <div class="container">
+      <div class="row col-md-12">
+        <div class="col-md-7" style="height: 450px; overflow-y: scroll;">
+          <div class="content p-4">
+          </div>
+        </div>
+        <div class="col-md-5">
+          <form class="p-4">
+            <div class="form-group">
+              <input type="text" class="form-control" id="name" placeholder="SSID" autofocus>
+            </div>
+            <div class="form-group">
+              <input type="text" class="form-control" id="pass" placeholder="Contraseña">
+            </div>
+            <button class="btn btn-primary btn-block"> Conectarse</button>
+            <div class="btn btn-primary btn-block" onclick="changeview('viewwifi', 'viewmenu')"> Atr&aacute;s</div>
+          </form>
+        </div>
+      </div>
+      <br>
+    </div>
+    <div style="margin-left: 10%; margin-right: 10%;">
+      <div class="row" style="font-size: 34px">
+        <ul id="keyboard">
+          <li class="symbol"><span class="off">`</span><span class="on">~</span></li>
+          <li class="symbol"><span class="off">1</span><span class="on">!</span></li>
+          <li class="symbol"><span class="off">2</span><span class="on">@</span></li>
+          <li class="symbol"><span class="off">3</span><span class="on">#</span></li>
+          <li class="symbol"><span class="off">4</span><span class="on">$</span></li>
+          <li class="symbol"><span class="off">5</span><span class="on">%</span></li>
+          <li class="symbol"><span class="off">6</span><span class="on">^</span></li>
+          <li class="symbol"><span class="off">7</span><span class="on">&amp;</span></li>
+          <li class="symbol"><span class="off">8</span><span class="on">*</span></li>
+          <li class="symbol"><span class="off">9</span><span class="on">(</span></li>
+          <li class="symbol"><span class="off">0</span><span class="on">)</span></li>
+          <li class="symbol"><span class="off">-</span><span class="on">_</span></li>
+          <li class="symbol"><span class="off">=</span><span class="on">+</span></li>
+          <li class="delete lastitem">&larr;</li><li class="tab">&#8633;</li>
+          <li class="letter">q</li><li class="letter">w</li><li class="letter">e</li>
+          <li class="letter">r</li><li class="letter">t</li><li class="letter">y</li>
+          <li class="letter">u</li><li class="letter">i</li><li class="letter">o</li>
+          <li class="letter">p</li>
+          <li class="symbol"><span class="off">[</span><span class="on">{</span></li>
+          <li class="symbol"><span class="off">]</span><span class="on">}</span></li>
+          <li class="symbol lastitem"><span class="off">\</span><span class="on">|</span></li>
+          <li class="capslock">caps lock</li><li class="letter">a</li><li class="letter">s</li>
+          <li class="letter">d</li><li class="letter">f</li><li class="letter">g</li>
+          <li class="letter">h</li><li class="letter">j</li><li class="letter">k</li>
+          <li class="letter">l</li>
+          <li class="symbol"><span class="off">;</span><span class="on">:</span></li>
+          <li class="symbol"><span class="off">'</span><span class="on">&quot;</span></li>
+          <li class="return lastitem">&crarr;</li><li class="left-shift">shift</li>
+          <li class="letter">z</li><li class="letter">x</li><li class="letter">c</li>
+          <li class="letter">v</li><li class="letter">b</li><li class="letter">n</li>
+          <li class="letter">m</li>
+          <li class="symbol"><span class="off">,</span><span class="on">&lt;</span></li>
+          <li class="symbol"><span class="off">.</span><span class="on">&gt;</span></li>
+          <li class="symbol"><span class="off">/</span><span class="on">?</span></li>
+          <li class="right-shift lastitem">shift</li><li class="space lastitem">&nbsp;</li>
+        </ul>
+      </div>
     </div>
   </div>
+  
+  <script src="js/jquery-1.9.1.min.js"></script>
   <script>
     var buildUrl = "Build";
     var loaderUrl = buildUrl + "/Ojos.loader.js";
@@ -74,17 +155,9 @@
 
     // Edited
     const { ipcRenderer } = require('electron');
-    var wifi = document.querySelector("#wifi");
-    var int = document.querySelector("#int");
     var reboot = document.querySelector("#reboot");
     var power = document.querySelector("#power");
     var ip = document.querySelector('#ip');
-    wifi.addEventListener('click', () => {
-      ipcRenderer.send('wifi:window');
-    });
-    int.addEventListener('click', () => {
-      ipcRenderer.send('int:window');
-    });
     reboot.addEventListener('click', () => {
       ipcRenderer.send('restart');
     });
@@ -92,11 +165,18 @@
       ipcRenderer.send('shutdown');
     });
     ipcRenderer.on('wifi:ip', (e, obj) => {
-      console.log(obj);
       ip.innerHTML = obj;
     });
     ipcRenderer.send('getip');
+
+    function changeview(id1, id2) {
+      document.getElementById(id1).style.display = 'none';
+      document.getElementById(id2).style.display = 'block';
+    }
   </script>
+  <script src="js/keyboard.min.js"></script>
+  <script src="js/wifi.min.js"></script>
+  <script src="js/interactions.min.js"></script>
 </body>
 
 </html>
