Corrección de errores en Wifi

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -70,14 +70,16 @@
     <br />
     <div class="row col-md-12">
       <div class="col-md-12">
+        <form>
           <div class="form-group">
             <input type="text" class="form-control input-font" id="name" placeholder="SSID" autofocus>
           </div>
           <div class="form-group">
             <input type="text" class="form-control input-font" id="pass" placeholder="**********">
           </div>
-          <button class="btn btn-primary btn-block"><i class="fa fa-plug fa-3x"></i></button>
+          <button type="submit" class="btn btn-primary btn-block"><i class="fa fa-plug fa-3x"></i></button>
           <div class="btn btn-primary btn-block" onclick="changeview('viewwifi2', 'viewmenu')"><i class="fa fa-mail-reply fa-3x"></i></div>
+        </form>
       </div>
     </div>
     <br>
